flex features added

--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <head>  
+        <meta charset="UTF-8">
+        <meta name="viewport"
+              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>
-        Ufuk Anil Calimli
+        Ufuk Anıl Çalımlı
     </title>
     <link rel="stylesheet" href="reset.css" >
     <link rel="stylesheet" href="style.css" >
 </head>
 <body>
     <div id="main-content">
-        <h2>Ufuk Anil Calimli</h2>
-        <div id="card">
-            <aside>
+        <div>
+            <h2>Ufuk Anıl Çalımlı</h2>
+        </div>
+        <div>
+            <div id="card">
                 <h4>Web Developer</h4>
                 <ul id="info">
                     <li>
@@ -29,45 +35,45 @@
                         <a href="https://github.com/ufukcalimli">Github</a>
                     </li>
                 </ul>
-            </aside>
+            </div>
         </div>
-        <img src="assets/thatsMe.JPG" id="pic-me">
-        <div id="education">
-            <h4>Educational Background</h4>
-            <ul>
-                <li id="currentStudy">
-                    2018 - Student of HackYourFuture in Amsterdam, Netherlands
-                </li>
-                <li>
-                    2016 - BilgeAdam Programming Course, Microsoft Developer in Ankara, Turkey    
-                </li>
-                <li>
-                    2012 - Akdeniz University, Computer Programming in Antalya, Turkey
-                </li>
-            </ul>
-        </div>
-        <div id="skills">
-            <h4 id="skillHeader">Skills</h4><br>
+        <div id="third-block">   
+            <div>
+                <h4>Educational Background</h4>
+                <ul>
+                    <li id="currentStudy">
+                        2018 - Student of HackYourFuture in Amsterdam, Netherlands
+                    </li>
+                    <li>
+                        2016 - BilgeAdam Programming Course, Microsoft Developer in Ankara, Turkey    
+                    </li>
+                    <li>
+                        2012 - Akdeniz University, Computer Programming in Antalya, Turkey
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h4 id="skillHeader">Skills</h4>
                 <ul>
                     <li>HTML/CSS</li>
                     <li>C#</li>
-                    <li>MSSQL</li>
                     <li>JavaScript</li>
-                    <li>JQuery</li>
                     <li>Python learner</li>
                 </ul>
-        </div>
-        <div id="langs">
-            <h4>Languages</h4><br>
-            <ul>
-                <li>
-                    Turkish (Native)
-                </li>
-                <li>
-                    English (C1 level)
-                </li>
-            </ul>
+            </div>
+            <div>
+                <h4>Languages</h4>
+                <ul>
+                    <li>
+                        Turkish (Native)
+                    </li>
+                    <li>
+                        English (C1 level)
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
+    <img src="assets/thatsMe.JPG" id="pic-me">
 </body>
 </html>
